--- a/exampleSite/i18n/en.toml
+++ b/exampleSite/i18n/en.toml
@@ -1,25 +1,25 @@
 # Simple translations without pluralization rules
-404_message = "Sorry – this page does not seem to exist (anymore)."
-address_title = "Address"
-all = "All"
-buy_now = "Buy now"
-categories = "Categories"
-contact_form_email = "Your e-mail address"
-contact_form_message = "Message"
-contact_form_name = "Your name"
-contact_form_subject = "Subject"
+404_message = "Xin lỗi, trang bạn truy cập hiện không tồn tại!"
+address_title = "Địa chỉ"
+all = "Tất cả"
+buy_now = "Mua ngay"
+categories = "Thư mục"
+contact_form_email = "Địa chỉ email của bạn"
+contact_form_message = "Lời nhắn"
+contact_form_name = "Họ và tên của bạn"
+contact_form_subject = "Tiêu đề"
 email = "E-mail"
 faq_toc_title = "Outline"
-form_respond = "Thank you for your message. We will get back to you as soon as possible."
-form_submitted = "Your message was successfully submitted"
-go_home = "To the home page"
-last_update = "Last updated"
-latest_posts = "Latest Posts"
-location = "Location"
-page_next = "Older"
-page_prev = "Newer"
-phone = "Phone"
-posted_by = "Posted by"
-read_more = "Continue reading"
-submit = "Send message"
+form_respond = "Cảm ơn bạn đã gửi tin nhắn. Chúng tôi sẽ phản hồi bạn sớm nhất có thể."
+form_submitted = "Tin nhắn của bạn đã được gửi thành công"
+go_home = "Đến trang chủ"
+last_update = "Cập nhật gần nhất"
+latest_posts = "Bài viết mới nhất"
+location = "Vị trí"
+page_next = "Cũ hơn"
+page_prev = "Mới hơn"
+phone = "Điện thoại"
+posted_by = "Viết bởi"
+read_more = "Tiếp tục đọc"
+submit = "Gửi tin nhắn"
 tags = "Tags"
