--- a/exampleSite/i18n/en.toml
+++ b/exampleSite/i18n/en.toml
@@ -3,7 +3,7 @@
 address_title = "Địa chỉ"
 all = "Tất cả"
 buy_now = "Mua ngay"
-categories = "Thư mục"
+categories = "Danh mục"
 contact_form_email = "Địa chỉ email của bạn"
 contact_form_message = "Lời nhắn"
 contact_form_name = "Họ và tên của bạn"
